# My_Train_Code

Camera _Calibration/: CMakeLists.txt  identify.hpp  main.cpp  test.cpp
Camera _Calibration/.cache/clangd/index/: CameraApi.h.4600D0DFFC0AD5A8.idx  CameraDefine.h.5090706106450408.idx  CameraStatus.h.F7551212894AFB03.idx  main.cpp.BB322213897CD7FC.idx  mv_camera.cpp.C28F0CFEAEAE4C69.idx  mv_camera.hpp.3D5A0E26E43D1532.idx  timer.cpp.86D3F3E62181ED11.idx  timer.hpp.CBEB1C9DEB79D82A.idx
Camera _Calibration/my_libs/camera/: CMakeLists.txt  mv_camera.cpp  mv_camera.hpp
Camera _Calibration/my_libs/timer/: CMakeLists.txt
MindMap/: 相机标定.mm
Project01/: CMakeLists.txt
Project02/: CMakeLists.txt
Project02/src/: main.cpp
Project03/: CMakeLists.txt  a.txt
Project03/include/: swap.h
Project03/src/: main.cpp
Project04/: CMakeLists.txt
Project04/src/: main.cpp
Project05/: CMakeLists.txt
Project05/src/: main.cpp
Project06/: CMakeLists.txt
Project06/src/: main.cpp
training_01/: CMakeLists.txt  README.md  main.cpp
training_01/.cache/clangd/index/: main.cpp.72AF480C6BBD1D07.idx  serial.hpp.845AFAB2286CAD30.idx
training_01/my_libs/: CMakeLists.txt
training_01/my_libs/include/: serial.hpp
training_01/my_libs/src/: serial.cpp
学习笔记/: root的使用.md  时间戳图像同步.md  迈德威视相机驱动.md
学习笔记/github使用/: GitHub使用说明.md
打开迈德威士/: CMakeLists.txt  main.cpp
打开迈德威士/.cache/clangd/index/: main.cpp.60A4DC2E7DC1404C.idx
打开迈德威士/my_libs/: CMakeLists.txt
打开迈德威士/my_libs/include/: camera.hpp  mv_camera.hpp
打开迈德威士/my_libs/include/ time/: timer.cpp
打开迈德威士/my_libs/include/MVSDK/: CameraApi.h
打开迈德威士/my_libs/src/: mv_camera.cpp
