CMAKE_MINIMUM_REQUIRED(VERSION 3.0) # 最小版本要求

PROJECT(REAL-TIME_TRAKING) # 工程名称

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON) 

FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

MESSAGE(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(REAL-TIME_TRAKING  src/main.cpp)

TARGET_LINK_LIBRARIES(REAL-TIME_TRAKING ${OpenCV_LIBS})